# CApexDumpWasm

./: .gitignore  CLAUDE.md  README.MD
.claude/: settings.local.json
DumpWasm/: CMakeLists.txt  CMakePresets.json  vcpkg.json
DumpWasm/CMakeProject1/: CMakeLists.txt  CMakeProject1.cpp
DumpWasm/CMakeProject1/3rd/: Log.h  PS.cpp  PS.h
DumpWasm/CMakeProject1/NT/: NTHeader.h
DumpWasm/CMakeProject1/dump/: Convar.h  Mics.h  Pattern.h  buttons.h  dataMap.h  dataTable.h  dumpContext.h  weaponSettings.h
DumpWasm/src/: CMakeLists.txt
DumpWasm/src/3rd/: Log.h  PS.cpp  PS.h
DumpWasm/src/NT/: NTHeader.h
DumpWasm/src/core/: Convar.cpp  Convar.h  DumpCore.cpp  DumpCore.h  DumpUtils.cpp  DumpUtils.h  Mics.cpp  Mics.h  Pattern.cpp  Pattern.h  buttons.cpp  buttons.h  dataMap.cpp  dataMap.h  dataTable.cpp  dataTable.h  dumpContext.h  weaponSettings.cpp  weaponSettings.h
DumpWasm/src/native/: CMakeLists.txt  main.cpp
DumpWasm/src/wasm/: CMakeLists.txt  wasm_main.cpp
WASMLoader/: index.html  package-lock.json  package.json  vite.config.js
WASMLoader/src/: App.vue  main.js  style.css
WASMLoader/src/components/: loadWasm.vue
WASMLoader/src/wasm/: DumpWasm.js  DumpWasm.wasm  main.js  main.wasm  wasmWorker.js
